--- a/ASFuelControl.Windows/ChangeLog.txt
+++ b/ASFuelControl.Windows/ChangeLog.txt
@@ -550,3 +550,7 @@
 Έκδοση Λογισμικού v1.2.90
 -------------------------
 Διορθωση σφάλματος παραστατικών με μηδενικό Φ.Π.Α.
+
+Έκδοση Λογισμικού v1.2.91
+-------------------------
+Διορθωση στρογγυλοποίησης παραστατικών αντλίας.
