--- a/ASFuelControl.Windows/ChangeLog.txt
+++ b/ASFuelControl.Windows/ChangeLog.txt
@@ -554,3 +554,7 @@
 Έκδοση Λογισμικού v1.2.91
 -------------------------
 Διορθωση στρογγυλοποίησης παραστατικών αντλίας.
+
+Έκδοση Λογισμικού v1.2.92
+-------------------------
+Προσθήκη Ad Blue
