--- a/ASFuelControl.Windows/ChangeLog.txt
+++ b/ASFuelControl.Windows/ChangeLog.txt
@@ -558,3 +558,7 @@
 Έκδοση Λογισμικού v1.2.92
 -------------------------
 Προσθήκη Ad Blue
+
+Έκδοση Λογισμικού v1.3.1
+-------------------------
+Αλλαγή στην αποστολή δεδομένων (v1.3)
