v.1.2.93 (Change the GetOtp timestamp process)

--- a/ASFuelControl.Windows/ChangeLog.txt
+++ b/ASFuelControl.Windows/ChangeLog.txt
@@ -558,3 +558,7 @@
 Έκδοση Λογισμικού v1.2.92
 -------------------------
 Προσθήκη Ad Blue
+
+Έκδοση Λογισμικού v1.2.93
+-------------------------
+Διόρθωση διαδικασίας χρονοσήμασνσης αποστολών
