Port change of the timestamp of GetOTP process

--- a/ASFuelControl.Windows/ChangeLog.txt
+++ b/ASFuelControl.Windows/ChangeLog.txt
@@ -559,6 +559,10 @@
 -------------------------
 Προσθήκη Ad Blue
 
+Έκδοση Λογισμικού v1.2.93
+-------------------------
+Διόρθωση διαδικασίας χρονοσήμασνσης αποστολών
+
 Έκδοση Λογισμικού v1.3.1
 -------------------------
 Αλλαγή στην αποστολή δεδομένων (v1.3)
