vs2017_ initial to 1.2.93

--- a/ASFuelControl.Windows/ChangeLog.txt
+++ b/ASFuelControl.Windows/ChangeLog.txt
@@ -550,3 +550,15 @@
 Έκδοση Λογισμικού v1.2.90
 -------------------------
 Διορθωση σφάλματος παραστατικών με μηδενικό Φ.Π.Α.
+
+Έκδοση Λογισμικού v1.2.91
+-------------------------
+Διορθωση στρογγυλοποίησης παραστατικών αντλίας.
+
+Έκδοση Λογισμικού v1.2.92
+-------------------------
+Προσθήκη Ad Blue
+
+Έκδοση Λογισμικού v1.2.93
+-------------------------
+Διόρθωση διαδικασίας χρονοσήμασνσης αποστολών
